# vslam_comparison

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: gazebo_realsense_d315_and_imu_models.yaml  gazebo_realsense_d315_model.yaml  orb_slam3_no_imu.rviz  orb_slam3_rgbd.rviz
doc/: rosbags_info.md
docker/: Dockerfile  build_image.sh  entrypoint.sh  parameters.sh  run-container.sh
launch/: hector_trajectory_servers.launch  orb_slam3_mono.launch  orb_slam3_mono_inertial.launch  orb_slam3_rgbd.launch  record_lar_gazebo_simulation_bag.launch
results/: consolidated-orb-slam3-mono.csv  consolidated-results-hector-slam.csv  consolidated-results-orb-slam3-rgbd.csv
results/ground-truth/: eight-trajectory.txt  square-trajectory.txt  straight-line-trajectory.txt
results/hector-slam/: eight-trajectory-1.txt  eight-trajectory-2.txt  eight-trajectory-3.txt  eight-trajectory-4.txt  eight-trajectory-5.txt  square-trajectory-1.txt  square-trajectory-2.txt  square-trajectory-3.txt  square-trajectory-4.txt  square-trajectory-5.txt  straight-line-trajectory-1.txt  straight-line-trajectory-2.txt  straight-line-trajectory-3.txt  straight-line-trajectory-4.txt  straight-line-trajectory-5.txt
results/openvslam/mono/: frame_trajectory.txt  keyframe_trajectory.txt
results/orb-slam/mono/: eight-trajectory-cam-traj.txt  eight-trajectory-kf-traj.txt  eight-trajectory.txt  square-trajectory-cam-traj.txt  square-trajectory-kf-traj.txt  square-trajectory.txt  straight-line-trajectory-cam-traj.txt  straight-line-trajectory-kf-traj.txt  straight-line-trajectory.txt
results/orb-slam/rgbd/: eight-trajectory-1.txt  eight-trajectory-2.txt  eight-trajectory-3.txt  eight-trajectory-4.txt  eight-trajectory-5.txt  square-trajectory-1.txt  square-trajectory-2.txt  square-trajectory-3.txt  square-trajectory-4.txt  square-trajectory-5.txt  straight-line-trajectory-1.txt  straight-line-trajectory-2.txt  straight-line-trajectory-3.txt  straight-line-trajectory-4.txt  straight-line-trajectory-5.txt
scripts/: evaluate_ate_scale.py  generate_results.bash  ground_truth_republisher.py  save_path.py  vslam_xforward_tf_broadcaster.py
srv/: SavePath.srv
