<?xml version="1.0"?>
<package format="2">
  <name>vslam_comparison</name>
  <version>0.0.0</version>
  <description>ROS package to use in a comparison of Visual SLAM methods using Gazebo</description>

  <maintainer email="mateusmenezes95@gmail.com">Mateus Menezes</maintainer>
  <author email="mateusmenezes95@gmail.com">Mateus Menezes</author>
  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>lar_gazebo</exec_depend>
  <exec_depend>orb_slam3_ros</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
  </export>
</package>
